--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
@@ -31,7 +34,10 @@
   "xo": {
     "extends": "prettier",
     "prettier": true,
-    "space": true
+    "space": true,
+    "rules": {
+      "import/extensions": "off"
+    }
   },
   "lint-staged": {
     "*.ts": [
